--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 compose = "1.4.0"
+composeMaterial3 = "1.0.1"
 activityCompose = "1.7.0"
 koin = "3.2.0"
 ktor = "2.2.4"
@@ -14,7 +15,7 @@ composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 composeFoundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-composeMaterial = { module = "androidx.compose.material:material", version.ref = "compose" }
+composeMaterial3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 
 activityCompose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose"}
 
