--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 compose = "1.4.0"
 composeMaterial3 = "1.0.1"
+composeNavigation = "2.5.3"
 activityCompose = "1.7.0"
 koin = "3.2.0"
 ktor = "2.2.4"
@@ -16,6 +17,7 @@ composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "c
 composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 composeFoundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
 composeMaterial3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
+composeNavigation = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
 
 activityCompose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose"}
 
