feat: Android setup

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
 
     <application
         android:allowBackup="false"
+        android:name=".SmakatsuApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".SmakatsuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -14,4 +15,4 @@
             </intent-filter>
         </activity>
     </application>
-</manifest> 
+</manifest>
