--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+appcompat = "1.6.1"
 compose = "1.4.0"
 composeMaterial3 = "1.0.1"
 composeNavigation = "2.5.3"
@@ -10,8 +11,11 @@ kotlinSerialization = "1.5.0"
 androidMinSdk = "26"
 androidCompileSdk = "33"
 androidTargetSdk = "33"
+androidApplication = "7.4.2"
 
 [libraries]
+appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
+
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
@@ -32,3 +36,4 @@ ktorSerialization = { module = "io.ktor:ktor-serialization-kotlinx-json", versio
 
 kotlinCoroutine = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinCoroutine" }
 kotlinSerialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerialization" }
+
