--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 appcompat = "1.6.1"
-compose = "1.4.0"
 composeMaterial3 = "1.0.1"
 composeNavigation = "2.5.3"
 activityCompose = "1.7.0"
@@ -17,10 +16,13 @@ daggerHilt = "2.44"
 [libraries]
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 
-composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-composeUiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
-composeFoundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+composeBom = "androidx.compose:compose-bom:2023.03.00"
+composeUi = { module = "androidx.compose.ui:ui" }
+composeUiTooling = { module = "androidx.compose.ui:ui-tooling" }
+composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview" }
+composeFoundation = { module = "androidx.compose.foundation:foundation" }
+composeRuntime = { module = "androidx.compose.runtime:runtime" }
+
 composeMaterial3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 composeNavigation = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
 
