--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:allowBackup="false"
         android:name=".SmakatsuApp"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"/>
+        android:allowBackup="false"
+        android:supportsRtl="true"/>
 </manifest>
